--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,1 +1,11 @@
-<h1>Please ask a question<h1>
+<h1>Stupid Coaching<h1>
+
+<p>Ask your coach anything<p>
+<form action="/answer" class="form-inline">
+  <div class="input-group input-group-lg">
+    <input type="text" name="question" class="form-control">
+    <span class="input-group-btn">
+      <input type="submit" value="Ask" class="btn btn-primary">
+    </span>
+  </div>
+</form>
